encrypted private keys using MD5

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+MyPublicMarvelApiKey="685fa38c1c52611a1bfa3e031e8797db"
+MyPrivateMarvelApiKey="d67579235c5ee29b3e237d47b5c946f788dbe5ff"
